--- a/src/app/components/organisms/documentation-form/documentation-form.component.html
+++ b/src/app/components/organisms/documentation-form/documentation-form.component.html
@@ -1,40 +1,73 @@
 @if (!loading) {
-        <form [formGroup]="documentForm" (ngSubmit)="onSubmit()">
-            <div class="content-row">
-                <div class="content-col m-8">
-                    <p class="small-p">
-                        A continuación podrá cargar todos los documentos requeridos para avanzar con su proceso de contratación, si no cuenta con la totalidad de los documentos en este momento puede ir subiendolos a medida que los tenga, dando siempre GUARDAR, antes de salir de esta pantalla. Para ingresar de nuevo y continuar con la carga de documentos debe ingresar el link enviado en el mail DYNAMO-TE DAMOS LA BIENVENIDA y generar de nuevo un token de seguridad. <b>Recuerde que su contratación no se podrá realizar hasta que haya subido la totalidad de los documentos</b>
-                    </p>
-                </div>
-                @for (doc of documents; track doc.id) {
-                  <p>
-                      {{ doc.document_type }}
-                  </p>
-                 @if(getErrorMessage(doc.id)) {
-                  <small class="error">
-                    {{ getErrorMessage(doc.id) }}
-                  </small>
-                 } @else if(doc.id == 330) {
-                  <p class="dscription">
-                    (<a [href]="apiUrlFront + 'public/carta-arl.docx'" download>Descargar formato</a>)
-                  </p>
-                 }
+    <form [formGroup]="documentForm" (ngSubmit)="onSubmit()">
+        <div class="content-row">
+            <div class="content-col m-8">
+                <p class="small-p">
+                    A continuación podrá cargar todos los documentos requeridos para avanzar con su proceso de contratación,
+                    si no cuenta con la totalidad de los documentos en este momento puede ir subiendolos a medida que los
+                    tenga, dando siempre GUARDAR, antes de salir de esta pantalla. Para ingresar de nuevo y continuar con la
+                    carga de documentos debe ingresar el link enviado en el mail DYNAMO-TE DAMOS LA BIENVENIDA y generar de
+                    nuevo un token de seguridad. <b>Recuerde que su contratación no se podrá realizar hasta que haya subido
+                    la totalidad de los documentos</b>
+                </p>
+            </div>
 
-                  <app-filebox [formControlName]="'document_' + doc.id"></app-filebox>
+            @for (doc of documents; track doc.id) {
+                <p [ngStyle]="{'margin-top': doc?.isArrayDocuments ? '20px' : null }"> {{ doc.document_type }}</p>
+
+                @if(getErrorMessage(doc.id)) {
+                    <small class="error">
+                        {{ getErrorMessage(doc.id) }}
+                    </small>
+                } @else if(doc.id == 330) {
+                    <p class="dscription">
+                        (<a [href]="apiUrlFront + 'public/carta-arl.docx'" download>Descargar formato</a>)
+                    </p>
                 }
-            </div>
-            <div class="content-buttons">
-                <app-black-button [name]="'enviar'" [type]="'submit'"></app-black-button>
-            </div>
-        </form>
-}
-@else {
+
+                <div [formArrayName]="'document_' + doc.id">
+                    @for (subDoc of getArrayForm(doc.id).controls; track subDoc; let i = $index) {
+                        <div class="array-doc" [formGroupName]="i">
+                            <div class="array-doc-file">
+                                @if (doc?.isArrayDocuments) {
+                                    <app-text-input
+                                        [label]="'Nombre el documento'"
+                                        [control]="$any(subDoc.get('name'))"
+                                        class="col-8"
+                                        (onBlur)="submitFile(doc, subDoc)"
+                                    />
+                                }
+
+                                <app-filebox [control]="$any(subDoc.get('file'))"></app-filebox>
+                            </div>
+
+                            @if (doc?.isArrayDocuments) {
+                                <button type="button" class="delete-button" (click)="deleteArraydoc(doc.id, i)">
+                                    <span class="material-symbols-outlined">
+                                      delete
+                                    </span>
+                                </button>
+                            }
+                        </div>
+                    }
+
+                    @if (doc?.isArrayDocuments) {
+                        <button class="btn-add" type="button" (click)="addNewDocument(doc)">
+                            <mat-icon>add</mat-icon>
+                            Agregar nuevo documento
+                        </button>
+                    }
+                </div>
+
+            }
+        </div>
+
+        <div class="content-buttons">
+            <app-black-button [name]="'enviar'" [type]="'submit'"></app-black-button>
+        </div>
+    </form>
+} @else {
     <div class="loader">
         <div class="custom-loader"></div>
     </div>
 }
-<ng-template #errorTemplate let-control="control">
-    @if (fDocuments[control].getError('required') != null && fDocuments[control].touched) {
-        <span class="validation-label">{{ 'Campo requerido' }}</span>
-    }
-</ng-template>
