feat: Add invoice-natural-form and invoice-juridica-form components

--- a/src/app/components/molecules/personas-expuestas-politicamente/personas-expuestas-politicamente.component.html
+++ b/src/app/components/molecules/personas-expuestas-politicamente/personas-expuestas-politicamente.component.html
@@ -19,7 +19,7 @@
 />
 
 
-@if (getControl('is_pep')?.value == '1') {
+@if (getControl('is_pep').value == '1') {
   <div class="row">
     <app-text-input
     [label]="'Fecha desde'"
