--- a/src/app/components/organisms/invoice-natural-form/invoice-natural-form.component.html
+++ b/src/app/components/organisms/invoice-natural-form/invoice-natural-form.component.html
@@ -1,1 +1,5 @@
-<p>invoice-natural-form works!</p>
+@if (currentStep === 1) {
+  <app-inf-step-one [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep"></app-inf-step-one>
+} @else if (currentStep === 2) {
+  <app-inf-step-two [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()"></app-inf-step-two>
+}
