refactor: Update invoice-natural-form component with dynamic step rendering and previous step functionality

--- a/src/app/components/organisms/invoice-natural-form/invoice-natural-form.component.html
+++ b/src/app/components/organisms/invoice-natural-form/invoice-natural-form.component.html
@@ -1,5 +1,5 @@
 @if (currentStep === 1) {
   <app-inf-step-one [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep"></app-inf-step-one>
 } @else if (currentStep === 2) {
-  <app-inf-step-two [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()"></app-inf-step-two>
+  <app-inf-step-two [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep()"></app-inf-step-two>
 }
